--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,11 @@
 
 	<dependencies>
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.4</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
