--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,7 +1,8 @@
 #需要被监控的路径集合，例如：monitorPatterns=monitorPattern1,monitorPattern2,monitorPattern3
-monitorPatterns=monitorPattern1
+monitorPatterns=monitorPattern1,monitorPattern2
 #需要被监控的路径之一(java正则表达式).建议以自己公司的包打头，尽量排除监控第三方jar，例如：monitorPattern1=com.myCompany.*.service.*
 monitorPattern1=test.Test1.*
+monitorPattern2=test.action.TestAction.*
 #是否打开sql监控
 #是否记录sql参数
 
