添加监控系统配置文件设置一些配置，和给用户提供用户的配置的配置文件。

--- a/src/main/resources/monitor.properties
+++ b/src/main/resources/monitor.properties
@@ -1,15 +1,21 @@
-#需要被监控的路径集合，例如：monitorPatterns=monitorPattern1,monitorPattern2,monitorPattern3
-monitorPatterns=monitorPattern1,monitorPattern2
-#需要被监控的路径之一(java正则表达式).建议以自己公司的包打头，尽量排除监控第三方jar，例如：monitorPattern1=com.myCompany.*.service.*
-monitorPattern1=test.Test1.*
-monitorPattern2=test.action.TestAction.*
-#是否打开sql监控
-#是否记录sql参数
+#不需要被监控的路径
+exPatterns=exPattern1,exPattern2,exPattern3,exPattern4,exPattern5,exPattern6
+exPattern1=javax.*
+exPattern2=com.sun.*
+exPattern3=sun..*
+exPattern4=java.*
+exPattern5=sunw.*
+exPattern6=\\[.*
+#一定需要需要被监控的路径。(有可能有些jdk或者其他需要被排除监控的java类里面偶尔有一些例外，是需要做另外处理的，比如http、sql等)
+inPatterns=inPattern1,inPattern2
+#需要被监控的路径之一(java正则表达式).
 
-#是否打开http server监控
-#是否记录http server参数
+inPattern1=http
+inPattern2=sql
 
-#
+#每个类都不需要进行监控的方法(构造方法)
+exMonitorMethods=exMonitorMethod1,exMonitorMethod2
+exMonitorMethod1=<init>
+exMonitorMethod2=<clinit>
 
-#监控服务器的服务地址
-monitorServerURL=localhost:8080/monitor
+#内部类和外部类、多线程在监控系统中的监控
